# MediaChat

./: readme.md
infrastructure/discord/commands/: sendFile.ts  sendUrl.ts
infrastructure/front/native/: Cargo.toml
infrastructure/front/native/.cargo/: config.toml
infrastructure/front/native/src/: app.rs  events.rs  main.rs  socket.rs  tray.rs  types.rs  ui.rs  video.rs
infrastructure/front/native/src/media/: active_media.rs
