[package]
name = "mediachat-native"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mediachat-native"
path = "src/main.rs"

[dependencies]
# Native GUI — transparent, borderless, GPU-rendered, no webview
eframe = { version = "0.29", features = ["wgpu"] }
egui = "0.29"

# Async runtime for Socket.IO
tokio = { version = "1", features = ["full"] }

# Socket.IO v4 client
rust_socketio = { version = "0.5", features = ["async"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image decoding (pure Rust, no system deps)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# HTTP downloads — rustls avoids a system OpenSSL pkg-config dependency
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Video decoding via system FFmpeg 4.x (Ubuntu 22.04 ships 4.4)
# Only enable what we use — avfilter/avdevice are not installed on this system
ffmpeg-next = { version = "4", default-features = false, features = ["format", "software-scaling"] }

# Temp files for video decode
tempfile = "3"

# CLI args
clap = { version = "4", features = ["derive", "env"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
